name:                servant-prometheus
version:             0.1.0.0
synopsis:            Helpers for using prometheus with servant
description:         Helpers for using prometheus with servant. Each endpoint has its own metrics allowing more detailed monitoring than wai-middleware-prometheus allows
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering <engineering@lists.anchor.net.au>, Servant Contributors
maintainer:          Alex Mason <axman6@gmail.com>
category:            System
build-type:          Simple
cabal-version:       >=1.10

source-repository HEAD
  type: git
  location: https://github.com/axman6/servant-prometheus

library
  exposed-modules:     Servant.Prometheus
  hs-source-dirs:      lib
  build-depends:       base >=4.7 && < 4.10
                     , prometheus-client
                     , servant > 0.10 && < 0.12
                     , http-types
                     , text
                     , time
                     , unordered-containers
                     , wai
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:      base == 4.*
                    , aeson
                    , servant-prometheus
                    , servant-server
                    , servant-client
                    , servant
                    , prometheus-client
                    , http-client
                    , text
                    , wai
                    , warp >= 3.2.4 && < 3.3
                    , hspec == 2.*
                    , unordered-containers
                    , transformers

executable bench
  hs-source-dirs: bench
  main-is: Main.hs
  ghc-options: -Wall -threaded -O2
  default-language: Haskell2010
  build-depends:      base == 4.*
                    , aeson
                    , servant-prometheus
                    , servant-server
                    , text
                    , wai
                    , warp >= 3.2.4 && < 3.3
                    , process
