name:                servant-prometheus
version:             0.2.0.0
synopsis:            Helpers for using prometheus with servant
description:         Helpers for using prometheus with servant. Each endpoint has its own metrics allowing more detailed monitoring than wai-middleware-prometheus allows
license:             BSD3
license-file:        LICENSE
author:              Alex Mason <axman6@gmail.com>, Anchor Engineering <engineering@lists.anchor.net.au>, Servant Contributors
maintainer:          Alex Mason <axman6@gmail.com>, Jack Kelly <jack.kelly@data61.csiro.au>
category:            System
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
                    README.md
                  , CHANGELOG.md

source-repository HEAD
  type: git
  location: https://github.com/axman6/servant-prometheus

library
  hs-source-dirs:      lib
  exposed-modules:     Servant.Prometheus
                     , Servant.Prometheus.Export
  other-modules:       Servant.Prometheus.Internal.Core
                     , Servant.Prometheus.Internal.Endpoints
                     , Servant.Prometheus.Internal.Inflight
                     , Servant.Prometheus.Internal.Middleware
                     , Servant.Prometheus.Internal.Latency
                     , Servant.Prometheus.Internal.StatusCodes
  build-depends:       base >= 4.7 && < 4.15
                     , prometheus-client >= 1.0
                     , servant > 0.10 && < 0.17
                     , servant-auth
                     , servant-server
                     , http-types
                     , text
                     , time
                     , unordered-containers
                     , wai
                     , bytestring
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  default-language: Haskell2010
  hs-source-dirs: test
  other-modules: Servant.PrometheusSpec
  main-is: Spec.hs
  build-depends:      base == 4.*
                    , aeson
                    , servant-prometheus
                    , servant-server
                    , servant-client
                    , servant
                    , prometheus-client
                    , http-client
                    , text
                    , wai
                    , warp >= 3.2.4 && < 3.4
                    , hspec == 2.*
                    , unordered-containers
                    , transformers

executable bench
  hs-source-dirs: bench
  main-is: Main.hs
  ghc-options: -Wall -threaded -O2
  default-language: Haskell2010
  build-depends:      base == 4.*
                    , aeson
                    , servant-prometheus
                    , servant-server
                    , prometheus-client
                    , text
                    , wai
                    , warp
                    , process
